--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Practice your muscle memory passwords.",
   "main": "index.js",
   "scripts": {
+    "start": "webpack --progress --colors --watch",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -15,5 +16,16 @@
   "bugs": {
     "url": "https://github.com/sgnl/fuzzy-pw/issues"
   },
-  "homepage": "https://github.com/sgnl/fuzzy-pw#readme"
+  "homepage": "https://github.com/sgnl/fuzzy-pw#readme",
+  "dependencies": {
+    "babel-core": "^6.7.7",
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-react": "^6.5.0",
+    "webpack": "^1.13.0"
+  },
+  "devDependencies": {
+    "react": "^15.0.1",
+    "react-dom": "^15.0.1"
+  }
 }
