--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack --progress --colors --watch",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "css:build": "node-sass scss/main.scss public/css/main.css -w scss/",
+    "dev": "npm run css:build & npm start"
   },
   "repository": {
     "type": "git",
@@ -23,9 +24,13 @@
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "express": "^4.13.4",
+    "node-sass": "^3.7.0",
     "webpack": "^1.13.0"
   },
   "devDependencies": {
+    "eslint": "^2.9.0",
+    "eslint-config-airbnb": "^8.0.0",
+    "eslint-plugin-react": "^5.0.1",
     "react": "^15.0.1",
     "react-dom": "^15.0.1"
   }
