--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "webpack --progress --colors --watch",
     "css:build": "node-sass scss/main.scss public/css/main.css -w scss/",
-    "dev": "npm run css:build & npm start"
+    "css:prefix": "postcss -u autoprefixer -r public/css/* -w",
+    "dev": "npm run css:build & npm run css:prefix & npm start"
   },
   "repository": {
     "type": "git",
@@ -28,9 +29,11 @@
     "webpack": "^1.13.0"
   },
   "devDependencies": {
+    "autoprefixer": "^6.3.6",
     "eslint": "^2.9.0",
     "eslint-config-airbnb": "^8.0.0",
     "eslint-plugin-react": "^5.0.1",
+    "postcss-cli": "^2.5.2",
     "react": "^15.0.1",
     "react-dom": "^15.0.1"
   }
