--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack --progress --colors --watch",
-    "css:build": "node-sass scss/main.scss public/css/main.css -w scss/",
-    "css:prefix": "postcss -u autoprefixer -r public/css/* -w",
+    "css:build": "node-sass scss/main.scss css/main.css -w scss/",
+    "css:prefix": "postcss -u autoprefixer -r css/* -w",
     "dev": "npm run css:build & npm run css:prefix & npm start"
   },
   "repository": {
