--- a/package.json
+++ b/package.json
@@ -24,16 +24,13 @@
     "eslint-plugin-jsx-a11y": "^1.0.2",
     "eslint-plugin-import": "1.6.0"
   },
-  "dependencies": {
+  "devDependencies": {
     "babel-core": "^6.7.7",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
-    "express": "^4.13.4",
     "node-sass": "^3.7.0",
-    "webpack": "^1.13.0"
-  },
-  "devDependencies": {
+    "webpack": "^1.13.0",
     "autoprefixer": "^6.3.6",
     "clean-css": "^3.4.13",
     "eslint": "^2.9.0",
