--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "webpack --progress --colors --watch",
     "css:build": "node-sass scss/main.scss css/main.css -w scss/",
     "css:prefix": "postcss -u autoprefixer -r css/main.css -w",
-    "dev": "npm run css:build & npm run css:prefix & npm start"
+    "dev": "npm run css:build & npm run css:prefix & npm start",
+    "build:production": "webpack && node-sass scss/main.scss css/main.css && postcss -u autoprefixer -r css/main.css && cleancss css/main.css -o css/main.css"
   },
   "repository": {
     "type": "git",
